crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ001_DTZ001.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ001 `datetime.datetime()` called without a `tzinfo` argument
 --> DTZ001.py:4:1
  |
4 | datetime.datetime(2000, 1, 1, 0, 0, 0)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter

DTZ001 `tzinfo=None` passed to `datetime.datetime()`
 --> DTZ001.py:7:1
  |
7 | datetime.datetime(2000, 1, 1, 0, 0, 0, 0, None)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter

DTZ001 `datetime.datetime()` called without a `tzinfo` argument
  --> DTZ001.py:13:1
   |
13 | datetime.datetime(2000, 1, 1, fold=1)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter

DTZ001 `tzinfo=None` passed to `datetime.datetime()`
  --> DTZ001.py:16:1
   |
16 | datetime.datetime(2000, 1, 1, tzinfo=None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter

DTZ001 `datetime.datetime()` called without a `tzinfo` argument
  --> DTZ001.py:21:1
   |
21 | datetime(2000, 1, 1, 0, 0, 0)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter
