crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ002_DTZ002.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ002 `datetime.datetime.today()` used
 --> DTZ002.py:4:1
  |
4 | datetime.datetime.today()
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Use `datetime.datetime.now(tz=...)` instead

DTZ002 `datetime.datetime.today()` used
 --> DTZ002.py:9:1
  |
9 | datetime.today()
  | ^^^^^^^^^^^^^^^^
  |
help: Use `datetime.datetime.now(tz=...)` instead
