crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ005_DTZ005.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ005 `datetime.datetime.now()` called without a `tz` argument
 --> DTZ005.py:4:1
  |
4 | datetime.datetime.now()
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
 --> DTZ005.py:7:1
  |
7 | datetime.datetime.now(bad=datetime.timezone.utc)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `tz=None` passed to `datetime.datetime.now()`
  --> DTZ005.py:10:1
   |
10 | datetime.datetime.now(None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `tz=None` passed to `datetime.datetime.now()`
  --> DTZ005.py:13:1
   |
13 | datetime.datetime.now(tz=None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:18:1
   |
18 | datetime.now()
   | ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:28:1
   |
28 | datetime.now().replace.astimezone()
   | ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:29:1
   |
29 | datetime.now().replace[0].astimezone()
   | ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:30:1
   |
30 | datetime.now()().astimezone()
   | ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:31:24
   |
31 | datetime.now().replace(datetime.now()).astimezone()
   |                        ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ005 `datetime.datetime.now()` called without a `tz` argument
  --> DTZ005.py:33:13
   |
33 | foo.replace(datetime.now().replace).astimezone()
   |             ^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter
