crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ006_DTZ006.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ006 `datetime.datetime.fromtimestamp()` called without a `tz` argument
 --> DTZ006.py:4:1
  |
4 | datetime.datetime.fromtimestamp(1234)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ006 `datetime.datetime.fromtimestamp()` called without a `tz` argument
 --> DTZ006.py:7:1
  |
7 | datetime.datetime.fromtimestamp(1234, bad=datetime.timezone.utc)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ006 `tz=None` passed to `datetime.datetime.fromtimestamp()`
  --> DTZ006.py:10:1
   |
10 | datetime.datetime.fromtimestamp(1234, None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ006 `tz=None` passed to `datetime.datetime.fromtimestamp()`
  --> DTZ006.py:13:1
   |
13 | datetime.datetime.fromtimestamp(1234, tz=None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter

DTZ006 `datetime.datetime.fromtimestamp()` called without a `tz` argument
  --> DTZ006.py:18:1
   |
18 | datetime.fromtimestamp(1234)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tz` parameter
