crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ007_DTZ007.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ007 Naive datetime constructed using `datetime.datetime.strptime()` without %z
 --> DTZ007.py:4:1
  |
4 | datetime.datetime.strptime("something", "%H:%M:%S%Z")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Call `.replace(tzinfo=<timezone>)` or `.astimezone()` to convert to an aware datetime

DTZ007 Naive datetime constructed using `datetime.datetime.strptime()` without %z
 --> DTZ007.py:7:1
  |
7 | datetime.datetime.strptime("something", "something")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Call `.replace(tzinfo=<timezone>)` or `.astimezone()` to convert to an aware datetime

DTZ007 Naive datetime constructed using `datetime.datetime.strptime()` without %z
  --> DTZ007.py:10:1
   |
10 | datetime.datetime.strptime("something", "something").replace(hour=1)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Call `.replace(tzinfo=<timezone>)` or `.astimezone()` to convert to an aware datetime

DTZ007 `datetime.datetime.strptime(...).replace(tz=None)` used
  --> DTZ007.py:13:1
   |
13 | datetime.datetime.strptime("something", "something").replace(tzinfo=None)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Pass a `datetime.timezone` object to the `tzinfo` parameter

DTZ007 Naive datetime constructed using `datetime.datetime.strptime()` without %z
  --> DTZ007.py:35:1
   |
35 | datetime.strptime("something", "something")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Call `.replace(tzinfo=<timezone>)` or `.astimezone()` to convert to an aware datetime
