crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ012_DTZ012.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ012 `datetime.date.fromtimestamp()` used
 --> DTZ012.py:4:1
  |
4 | datetime.date.fromtimestamp(1234)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Use `datetime.datetime.fromtimestamp(ts, tz=...).date()` instead

DTZ012 `datetime.date.fromtimestamp()` used
 --> DTZ012.py:9:1
  |
9 | date.fromtimestamp(1234)
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Use `datetime.datetime.fromtimestamp(ts, tz=...).date()` instead
