crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ901_DTZ901.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ901 Use of `datetime.datetime.max` without timezone information
 --> DTZ901.py:5:1
  |
5 | datetime.datetime.max
  | ^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.min` without timezone information
 --> DTZ901.py:6:1
  |
6 | datetime.datetime.min
  | ^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.max` without timezone information
 --> DTZ901.py:8:1
  |
8 | datetime.datetime.max.replace(year=...)
  | ^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.min` without timezone information
 --> DTZ901.py:9:1
  |
9 | datetime.datetime.min.replace(hour=...)
  | ^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.max` without timezone information
  --> DTZ901.py:27:1
   |
27 | datetime.max
   | ^^^^^^^^^^^^
   |
help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.min` without timezone information
  --> DTZ901.py:28:1
   |
28 | datetime.min
   | ^^^^^^^^^^^^
   |
help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.max` without timezone information
  --> DTZ901.py:30:1
   |
30 | datetime.max.replace(year=...)
   | ^^^^^^^^^^^^
   |
help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901 Use of `datetime.datetime.min` without timezone information
  --> DTZ901.py:31:1
   |
31 | datetime.min.replace(hour=...)
   | ^^^^^^^^^^^^
   |
help: Replace with `datetime.datetime.min.replace(tzinfo=...)`
