crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__call-date-today_DTZ011.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ011 `datetime.date.today()` used
 --> DTZ011.py:4:1
  |
3 | # qualified
4 | datetime.date.today()
  | ^^^^^^^^^^^^^^^^^^^^^
5 |
6 | from datetime import date
  |
help: Use `datetime.datetime.now(tz=...).date()` instead

DTZ011 `datetime.date.today()` used
 --> DTZ011.py:9:1
  |
8 | # unqualified
9 | date.today()
  | ^^^^^^^^^^^^
help: Use `datetime.datetime.now(tz=...).date()` instead
